@@ -27,7 +27,7 @@ complex_structured_reference     = /\[[^\u005d]*\],\[[^\u005d]*\]/
 overly_structured_reference      = `'[' simple_structured_reference `']'
 simple_structured_reference      = /[^\u005d]*/
 named_reference                 := /[#\p{word}][\p{word}_.!]+/
-sheet_reference                 := (single_quoted_string | /[\p{word}][\p{word}_.]+/) `'!' (sheetless_reference | named_reference)
+sheet_reference                 := (single_quoted_string | /[\p{word}][\p{word}_.]+/) `'!' (sheetless_reference | error | named_reference)
 single_quoted_string             = `"'" /[^']*/ `"'"
 sheetless_reference              = column_range | row_range | area | cell
 column_range                    := column `':' column
